--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,15 @@
 {
-    "compilerOptions": {
-        "target": "ES6"
-    },
-    "exclude": [
-        "node_modules",
-        "**/node_modules/*"
-    ]
+	"compilerOptions": {
+		"target": "ES6",
+		"module": "commonjs"
+	},
+	"exclude": [
+		"node_modules",
+		"**/node_modules/*"
+	],
+	"include": [
+		"src/**/*",
+		"test/**/*"
+	],
+	"baseUrl": "."
 }
