--- a/.prettierrc
+++ b/.prettierrc
@@ -5,7 +5,7 @@
     "singleQuote": false,
     "trailingComma": "none",
     "jsxBracketSameLine": false,
-	"parser": "babylon",
+	"parser": "typescript",
 	"semi": true,
 	"bracketSpacing": true
 }
